--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
      display: flex;
      flex-direction: column;
      background: #7c7c7cb2;
+     background-image: url('https://source.unsplash.com/1600x900/?landscape');
 }
 #map {
      width: 500px; 
