--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
      justify-content: center;
      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
      width: 100%;
-     color: white;
+     color: #F4584b;
      /* border: 5px solid darkred;  */
      /* text-align: justify; */
      
