--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,23 @@ body {
      width:100%;
      border-radius: 7px;
 }
+.clearBtn{
+     display:none;
+     margin-top: 5px;
+     width: 100%;
+     border-radius: 7px;
+     border: 1px solid rgba(109, 199, 194, 0.904); 
+     background-color: rgba(154, 247, 242, 0.904);
+     text-align: center;
+     text-transform: uppercase;
+     color:#555;
+     font-size:11px;
+     font-weight:bold;
+}
+.clearBtn:hover{
+     cursor:pointer;
+     background-color: rgba(11, 167, 71, 0.904);
+}
 #submit-btn {
      margin-top: 5px;
      width: 100%;
